--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <form action="/login" method="POST">
+    <form action="/signin" method="POST">
         <input type="text" name="email" placeholder="Correo Electronico">
         <input type="text" name="password" placeholder="Contraseña">
         <button type="submit">Entrar</button>
