--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -3,14 +3,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Nutre - Login</title>
+    <link rel="stylesheet" href="/css/site.css">
+    <link rel="stylesheet" href="/css/materialize.css">
+    <link rel="stylesheet" href="/css/animate.css">
 </head>
-<body>
+<body class="animated fadeIn">
+    <div class="display-table">
+        <div class="display-table-row">
+            <div class="display-table-cell login-col-l">
+                
+            </div>
+            <div class="display-table-cell login-col-r">
+                <form action="/signin" method="POST">
+                    <input type="text" name="email" placeholder="Correo Electronico" required>
+                    <input type="text" name="password" placeholder="Contraseña">
+                    <button type="submit" class="btn btn-green wave-effect">Entrar</button>
+                    <span class="right"><a href="/signup">Registrarme</a></span>
+                </form>
+            </div>
+        </div>
+    </div>
+  <% for(var i in messages) { %>
+    <div class="flash"><%= messages[i] %></div>
+  <% } %>
 
-    <form action="/login" method="POST">
-        <input type="text" name="email" placeholder="Correo Electronico">
-        <input type="text" name="password" placeholder="Contraseña">
-        <button type="submit">Entrar</button>
-    </form>
 </body>
 </html>
