--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -3,18 +3,39 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Registrarse</title>
+    <link rel="stylesheet" href="/css/site.css">
+    <link rel="stylesheet" href="/css/materialize.css">
+	<link rel="stylesheet" href="/css/animate.css" >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
-<body>
-  <% for(var i in messages) { %>
-    <div class="flash"><%= messages[i] %></div>
-  <% } %>
-    <form action="/signup" method="POST">
-        <input type="text" name="firstName" placeholder="Nombre">
-        <input type="text" name="lastName" placeholder="Apellido">
-        <input type="email" name="email" placeholder="Email">
-        <input type="text" name="password" placeholder="password">
-        <button type="submit">Enviar</button>
-    </form>
+<body class="animated fadeIn registro">
+
+        <div class="row">
+            <div class="col m4 offset-m4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="http://www.agua.org.mx/h2o/images/2012/agua%202%20750.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                            <form action="/signup" method="POST">
+                                <input type="text" name="firstName" class="form-control" placeholder="Nombre">
+                                <input type="text" name="lastName" class="form-control" placeholder="Apellido">
+                                <input type="email" name="email" class="form-control" placeholder="Email">
+                                <input type="text" name="password" class="form-control" placeholder="password">
+                                <br>
+                                <button type="submit" class="btn btn-success">Enviar</button>
+                            </form> 
+                            <div class="center-align">
+                                    <% for(var i in messages) { %>
+                                        <br>
+                                        <div class="chip"><%= messages[i] %></div>
+                                    <% } %>
+                            </div>                             
+                    </div>
+                </div>
+
+            </div>
+        </div>       
 </body>
 </html>
