--- a/public/css/site.css
+++ b/public/css/site.css
@@ -6,6 +6,8 @@
 
 .display-table {
     display: table;
+    padding: 0;
+    width: 100%;
     height: 100%;
 }
 
@@ -19,6 +21,11 @@
     display: table-cell;
     float: none;
     height: 100%;
+    background-color: #F9F9F9;
+}
+
+.row {
+    margin: 0px !important;
 }
 
 .login-col-l {
@@ -49,3 +56,222 @@
        padding: 10px; 
        margin-top: 70%;
     }
+
+    .registro
+    {
+        width: 100%; 
+        background: rgba(219, 0, 0, 0.37);
+    }
+
+        .registro::after {
+            content: "";
+            background: url(../img/nature-59.jpg);
+            background-size: cover;
+            opacity: 0.5;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            position: absolute;
+            z-index: -1;
+        }
+
+.nutre-side-bar {
+    width: 12%;
+    float: left;
+    height: 100% ;
+    border-right : solid 0.5px rgba(0,0,0,0.2);
+}
+
+.nutre-main
+{
+    width: 88%;
+    float: left;
+    height: 100%;
+}
+
+.top-bar
+{
+    height: 60px;
+    width: 100%;
+    background-color: #53bf6b;
+}
+
+.profile-container {
+    height: 120px; 
+    width: 100%;
+    border: 1px solid #000;
+}
+    .profile-container > .profile-img {
+        width: 50%;
+    }
+    .profile-container > .profile-img > img {
+        border-radius: 50%; 
+        border: 1px solid #000 !important;
+    }
+    .profile-container > .profile-info{
+        width: 50%;
+        float: right;
+    }
+
+.profile-info {
+    
+}
+
+header {
+    height: 60px;
+    max-height: 60px;
+    width: 100%;
+    display: block;
+    border-bottom: 1px #c3c3c3 solid;
+}
+
+.nutre-side-bar-sm
+{
+    width: 6%;
+    float: left;
+    height: 100% ;
+    border-right : solid 0.5px rgba(0,0,0,0.2);
+}
+
+#toggle-bars {
+    margin-left: 5px; 
+    padding: 15px;
+    color: white;
+    font-weight: 100;
+}
+
+input.form-control
+{
+    margin-top: 15px;
+}
+
+.card-panel {
+  transition: box-shadow .25s;
+  padding: 20px;
+  margin: 0.5rem 0 1rem 0;
+  border-radius: 2px;
+  background-color: #fff;
+}
+
+.card {
+  position: relative;
+  margin: 0.5rem 0 1rem 0;
+  background-color: #fff;
+  transition: box-shadow .25s;
+  border-radius: 2px;
+}
+
+.card .card-title {
+  font-size: 24px;
+  font-weight: 300;
+}
+
+.card .card-title.activator {
+  cursor: pointer;
+}
+
+.card.small, .card.medium, .card.large {
+  position: relative;
+}
+
+.card.small .card-image, .card.medium .card-image, .card.large .card-image {
+  max-height: 60%;
+  overflow: hidden;
+}
+
+.card.small .card-content, .card.medium .card-content, .card.large .card-content {
+  max-height: 40%;
+  overflow: hidden;
+}
+
+.card.small .card-action, .card.medium .card-action, .card.large .card-action {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  background-color: inherit;
+}
+
+.card.small {
+  height: 300px;
+}
+
+.card.medium {
+  height: 400px;
+}
+
+.card.large {
+  height: 500px;
+}
+
+.card .card-image {
+  position: relative;
+}
+
+.card .card-image img {
+  display: block;
+  border-radius: 2px 2px 0 0;
+  position: relative;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.card .card-image .card-title {
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 20px;
+}
+
+.card .card-content {
+  padding: 20px;
+  border-radius: 0 0 2px 2px;
+}
+
+.card .card-content p {
+  margin: 0;
+  color: inherit;
+}
+
+.card .card-content .card-title {
+  line-height: 48px;
+}
+
+.card .card-action {
+  border-top: 1px solid rgba(160, 160, 160, 0.2);
+  padding: 20px;
+}
+
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
+  color: #ffab40;
+  margin-right: 20px;
+  transition: color .3s ease;
+  text-transform: uppercase;
+}
+
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
+  color: #ffd8a6;
+}
+
+.card .card-reveal {
+  padding: 20px;
+  position: absolute;
+  background-color: #fff;
+  width: 100%;
+  overflow-y: auto;
+  top: 100%;
+  height: 100%;
+  z-index: 1;
+  display: none;
+}
+
+.card .card-reveal .card-title {
+  cursor: pointer;
+  display: block;
+}
